welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:2: error: ';' expected but ')' found.
    return ((!isAsleep && (isMorning && isMom) ) || !isMorning))
                                                               ^